@@ -19,7 +19,6 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
 import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.test.context.TestPropertySource;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
@@ -27,7 +26,8 @@ import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.sql.DataSource;
-import java.util.Collections;
+
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -40,12 +40,7 @@ import static org.junit.jupiter.api.Assertions.*;
 @SpringBootTest(classes = {
     RefreshAutoConfiguration.class,
     DatabaseAuthenticationTestConfiguration.class
-})
-@DirtiesContext
-@EnabledIfPortOpen(port = 5432)
-@EnabledIfContinuousIntegration
-@Tag("Postgres")
-@TestPropertySource(properties = {
+}, properties = {
     "database.user=postgres",
     "database.password=password",
     "database.driverClass=org.postgresql.Driver",
@@ -53,6 +48,10 @@ import static org.junit.jupiter.api.Assertions.*;
     "database.url=jdbc:postgresql://localhost:5432/",
     "database.dialect=org.hibernate.dialect.PostgreSQL95Dialect"
 })
+@DirtiesContext
+@EnabledIfPortOpen(port = 5432)
+@EnabledIfContinuousIntegration
+@Tag("Postgres")
 public class QueryDatabaseAuthenticationHandlerPostgresTests {
     private static final String SQL = "SELECT * FROM caspgusers where username=?";
     private static final String PASSWORD_FIELD = "password";
@@ -91,7 +90,7 @@ public class QueryDatabaseAuthenticationHandlerPostgresTests {
     @Test
     @SneakyThrows
     public void verifySuccess() {
-        val map = CoreAuthenticationUtils.transformPrincipalAttributesListIntoMultiMap(Collections.singletonList("locations"));
+        val map = CoreAuthenticationUtils.transformPrincipalAttributesListIntoMultiMap(List.of("locations"));
         val q = new QueryDatabaseAuthenticationHandler("DbHandler", null,
             PrincipalFactoryUtils.newPrincipalFactory(), 0,
             this.dataSource, SQL, PASSWORD_FIELD,
